syntax = "proto3";

package proto;
//option go_package = "github.com/code-newbee/protocol/geeker";
option java_multiple_files = true;
option java_package = "io.grpc.generate.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";


service Greeker{
    rpc sayHello (HelloRequest) returns (HelloReply){

    }
}

message HelloRequest{
    string name = 1;
}

message HelloReply{
    string message = 1;
}